# moneymap

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  demo_moneymap.py  moneymap_demo.py  moneymap_design.md  pyproject.toml  tutorial.ipynb
.github/workflows/: ci.yml  pypi-publish.yml
docs/: Tutorial.ipynb  moneymap_design.md
moneymap/: Dockerfile  README.md  __init__.py  currency.py  dataframe.py  dataframepd.py  dataframepl.py  exceptions.py  help.py  polars.py  pyproject.toml  requirements-docker.txt  taxes.py  test_moneymap.py
